# AlchemSim

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  dependencies.py  main.py
backend/app/api/: auth.py  geometry.py  mesh.py  projects.py  results.py  router.py  simulations.py  ws.py
backend/app/core/: database.py  security.py  storage.py
backend/app/models/: __init__.py  base.py  geometry.py  mesh.py  project.py  result.py  simulation.py  user.py  workspace.py
backend/app/schemas/: geometry.py  mesh.py  project.py  result.py  simulation.py  user.py
backend/app/services/: auth_service.py  geometry_service.py  mesh_service.py  project_service.py  result_service.py  solver_service.py  storage_service.py
backend/app/tasks/: celery_app.py  mesh_tasks.py  solver_tasks.py
backend/tests/: conftest.py  test_auth.py  test_projects.py
docker/: backend.Dockerfile  nginx.conf  solver.Dockerfile
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: auth.ts  client.ts  geometry.ts  mesh.ts  projects.ts  simulations.ts
frontend/src/hooks/: useWebSocket.ts
frontend/src/lib/: colorMaps.ts  constants.ts  stlParser.ts
frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx  NotFoundPage.tsx  WorkspacePage.tsx
frontend/src/stores/: authStore.ts  viewportStore.ts  (+2 more)
shared/: fluid_library.json
(+36 files in other folders)
